src/objects/n2de__Distributor__c.object
<CustomObject>
    <description>Team assignment distributors</description>
    <fields>
        <fullName>n2de__Alert_period__c</fullName>
        <description>*** Deprecated ***</description>
        <label>Alert period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_unit__c</fullName>
        <description>*** Deprecated ***</description>
        <label>Alert unit</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Algorithm__c</fullName>
        <inlineHelpText>The method of distribution this distributor or trigger will use to distribute objects to team members.</inlineHelpText>
        <label>Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>Round robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round robin weighted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round robin sticky assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round robin lookup owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Campaign_filter_ids__c</fullName>
        <label>Campaign filter ids</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Default_owner_queue_id__c</fullName>
        <inlineHelpText>Queue used for default owner assignment.</inlineHelpText>
        <label>Default owner queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Default_owner_type__c</fullName>
        <inlineHelpText>The queue or user to which leads or cases will be assigned if the trigger cannot distribute because the assigned owner cannot be found as an available team member. Note: in this event no distribution logging will occur.</inlineHelpText>
        <label>Default owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Default_owner_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User used for default owner assignment.</inlineHelpText>
        <label>Default owner user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributors_defaultowner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distribute_from_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Salesforce user that this distributor will distribute objects from.</inlineHelpText>
        <label>Distribute from user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_control__c</fullName>
        <inlineHelpText>The method used to control the maximum number of objects that are distributed to members of the team.</inlineHelpText>
        <label>Distribution control cap</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_control_member_cap__c</fullName>
        <inlineHelpText>The cap, in number of objects, that is applied to members of the team based upon the selected distribution control.</inlineHelpText>
        <label>Member cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_type__c</fullName>
        <label>Distributor type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Dynamic_owner_field_name__c</fullName>
        <inlineHelpText>The formula field containing owner Id that will be used for dynamic distribution of this object</inlineHelpText>
        <label>Dynamic owner formula</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Email_notifications_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, disables email notifications from the standard Engine workflow rule</inlineHelpText>
        <label>Disable standard email notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Execution_order__c</fullName>
        <inlineHelpText>The order of execution of this distributor within the team in relation to other distributors in the team.</inlineHelpText>
        <label>Execution order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Field_to_update_name__c</fullName>
        <inlineHelpText>When selected, the name of the object field whose value should be changed when an object is distributed to a team member.</inlineHelpText>
        <label>Field to update</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Field_to_update_value__c</fullName>
        <inlineHelpText>The value the field to update should be changed to when an object is distributed.</inlineHelpText>
        <label>Field to update value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_by_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter by campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_logic__c</fullName>
        <label>Filter logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Filter_soql_string__c</fullName>
        <inlineHelpText>The SOQL condition expression that will be used to filter this distributor. The expression must follow SOQL condition syntax and only the condition expression section is valid. Any other SOQL syntax is not valid, including the &apos;where&apos; keyword.</inlineHelpText>
        <label>Advanced filter expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Ignore_team_level_caps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow number of assignments from this distributor to exceed the team-level caps</inlineHelpText>
        <label>Ignore team-level caps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When active, object records will be distributed to team members.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_advanced_filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, enables advanced SOQL filter mode. Note: for advanced users, requires familiarity with SOQL language syntax</inlineHelpText>
        <label>Advanced filter mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any alerts that have been specified for the team will be active for this distributor. Uncheck to disable alerts for this distributor.</inlineHelpText>
        <label>Alerts enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_all_members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is all members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_auto_reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked object records will be re-assigned to a specified queue or user when the distribution of that record goes into alert.</inlineHelpText>
        <label>Auto re-assign enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distribute_from_user__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, allows objects to be distributed from a selected Salesforce user instead of a queue.</inlineHelpText>
        <label>Distribute from user enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributor_category__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, enables the selection of a distributor filter.</inlineHelpText>
        <label>Filter enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_filter_logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter logic enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_member_filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, enables selection of a member filter.</inlineHelpText>
        <label>Member filter enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassign_to_user__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, allows objects to be re-assigned to a selected Salesforce user instead of a queue.</inlineHelpText>
        <label>Re-assign to user enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reject_to_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject to user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_respect_distribution_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, pull distributors will not allow team members to pull outside of hours.</inlineHelpText>
        <label>Respect distribution hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_round_robin_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, round robin will not be performed when a lookup owner match or sticky assignment is not found.</inlineHelpText>
        <label>Round robin disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_stick_on_OOO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, sticky assignment rules will be retained when a team member is out of office. If unchecked and a team member is out of office, an active sticky assignment rule will be cancelled and the object distributed to the next available member.</inlineHelpText>
        <label>Retain sticky on OoO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_stick_on_widget_off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, sticky assignment rules will be retained when a team member is logged out of the widget, but within working hours.</inlineHelpText>
        <label>Retain sticky on widget logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_user_logout_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable user logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_weighting_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked round robin team member weighting is enabled.</inlineHelpText>
        <label>Round robin weighting enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distribution_date__c</fullName>
        <label>Last distribution date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distribution_is_ih__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last distribution is ih</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_edited_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last edited by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributors_lastedited</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Last_edited_date__c</fullName>
        <label>Last edited date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_member_distributed__c</fullName>
        <label>Last member distributed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Load_balancing_level__c</fullName>
        <inlineHelpText>Whether to load balance distributions across the whole team, or just within this distributor.</inlineHelpText>
        <label>Load balancing level</label>
        <picklist>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_dynamic_fields__c</fullName>
        <label>Lookup dynamic fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_filter_field_name__c</fullName>
        <inlineHelpText>Field on the lookup object used to filter matches</inlineHelpText>
        <label>Lookup filter field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_filter_field_type__c</fullName>
        <inlineHelpText>Field type of lookup filter field</inlineHelpText>
        <label>Lookup filter field type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_filter_operator__c</fullName>
        <inlineHelpText>Lookup filter operator</inlineHelpText>
        <label>Lookup filter operator</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_filter_value_long__c</fullName>
        <label>Lookup filter value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_match_field_2__c</fullName>
        <label>Lookup match field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_match_field_3__c</fullName>
        <label>Lookup match field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_match_field_name__c</fullName>
        <inlineHelpText>The field the unique identifier must match when performing the lookup</inlineHelpText>
        <label>Lookup match field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_object_name__c</fullName>
        <inlineHelpText>The object to lookup to find a matching record to obtain the user to assign to.</inlineHelpText>
        <label>Lookup object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_owner_field_name__c</fullName>
        <inlineHelpText>The selected field to be used to determine the user to distribute to.</inlineHelpText>
        <label>Lookup owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_unique_field_2__c</fullName>
        <label>Lookup unique field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_unique_field_3__c</fullName>
        <label>Lookup unique field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Lookup_unique_id_field_name__c</fullName>
        <inlineHelpText>The distributed object unique identifier field used to find a match on lookup</inlineHelpText>
        <label>Lookup unique id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Member_filter_type__c</fullName>
        <description>Determines the type of member filtering for this distributor. Either select team members manually to create a sub team or use tags to limit distribution to matching team members.</description>
        <inlineHelpText>Determines the type of member filtering for this distributor. Either select team members manually to create a sub team or use tags to limit distribution to matching team members.</inlineHelpText>
        <label>Member filter type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Order_1_field_name__c</fullName>
        <inlineHelpText>1st field to determine the sequence that objects are processed in the queue.</inlineHelpText>
        <label>Order field 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Order_1_order_by__c</fullName>
        <inlineHelpText>Order field 1 by ascending (Asc) or decending (Desc) sequence</inlineHelpText>
        <label>Order by 1</label>
        <picklist>
            <picklistValues>
                <fullName>Asc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Order_2_field_name__c</fullName>
        <inlineHelpText>2nd field to determine the sequence that objects are processed in the queue.</inlineHelpText>
        <label>Order field 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Order_2_order_by__c</fullName>
        <inlineHelpText>Order field 2 by ascending (Asc) or decending (Desc) sequence</inlineHelpText>
        <label>Order by 2</label>
        <picklist>
            <picklistValues>
                <fullName>Asc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Order_3_field_name__c</fullName>
        <inlineHelpText>3rd field to determine the sequence that objects are processed in the queue.</inlineHelpText>
        <label>Order field 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Order_3_order_by__c</fullName>
        <inlineHelpText>Order field 3 by ascending (Asc) or decending (Desc) sequence</inlineHelpText>
        <label>Order by 3</label>
        <picklist>
            <picklistValues>
                <fullName>Asc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Queue_id__c</fullName>
        <description>Salesforce Id of related queue</description>
        <inlineHelpText>The Salesforce queue that this distributor will distribute objects from.</inlineHelpText>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Re_assign_on_alert_sequence__c</fullName>
        <inlineHelpText>Number of the alert on which to re-assign the record</inlineHelpText>
        <label>xRe-assign on alert sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Reassign_field_to_update_name__c</fullName>
        <inlineHelpText>When selected, the name of the object field whose value should be changed when an object is re-assigned.</inlineHelpText>
        <label>Field to update</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reassign_field_to_update_value__c</fullName>
        <inlineHelpText>The value the field to update should be changed to when an object is re-assigned</inlineHelpText>
        <label>Field to update value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reassign_on_alert_sequence__c</fullName>
        <inlineHelpText>Number of the alert on which to re-assign the record</inlineHelpText>
        <label>Re-assign on alert sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Reassign_queue_id__c</fullName>
        <inlineHelpText>The Salesforce queue that this distributor will re-assign objects to.</inlineHelpText>
        <label>Re-assign to queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reassign_to_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Salesforce user that this distributor will re-assign objects to.</inlineHelpText>
        <label>Re-assign to user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributors_reassign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Reject_field_to_update_name__c</fullName>
        <label>Field to update</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reject_field_to_update_value__c</fullName>
        <label>Field to update value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reject_queue_id__c</fullName>
        <label>Reject to queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reject_to_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reject to user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reject_distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_assignment_id_field_name__c</fullName>
        <inlineHelpText>The selected field that will contain the unique identifier to be used when determining whether an object should be distributed as a sticky assignment</inlineHelpText>
        <label>Sticky match field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_match_level__c</fullName>
        <inlineHelpText>The level at which sticky assignment matching should occur.</inlineHelpText>
        <label>Sticky match level</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_period__c</fullName>
        <inlineHelpText>The period of time a sticky assignment should remain active</inlineHelpText>
        <label>Sticky period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_period_minutes__c</fullName>
        <formula>IF( ISPICKVAL( n2de__Sticky_unit__c, &apos;Days&apos;), n2de__Sticky_period__c * 1440,  IF( ISPICKVAL( n2de__Sticky_unit__c, &apos;Hours&apos;), n2de__Sticky_period__c * 60, n2de__Sticky_period__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sticky period minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_unit__c</fullName>
        <label>Sticky unit</label>
        <picklist>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Subteam_members__c</fullName>
        <label>Subteam members</label>
        <summaryForeignKey>n2de__Distributor_category_team_member__c.n2de__Distributor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>n2de__Team__c</fullName>
        <label>Distribution team</label>
        <referenceTo>n2de__Team__c</referenceTo>
        <relationshipLabel>Distributors</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Distributor</label>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>